--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,8 +89,7 @@ button {  width: auto; overflow: visible; }
 
 #main {
   margin: 10px auto;
-  border: 1px solid red;
-  width: 640px;
+  width: 550px;
   padding: 10px;
 }
 
@@ -114,7 +113,6 @@ button {  width: auto; overflow: visible; }
 
 #game_info {
   margin-left: 220px;
-  border: 1px solid blue;
 }
 
 #game_info > div {
@@ -192,9 +190,10 @@ button {  width: auto; overflow: visible; }
 #players li, #words li, #votes li, #scores ul.words li {
   list-style-type: none;
   font-weight: normal;
-  display: inline;
-  margin: 0;
-  padding: 0.25em 0.5em;
+  display: inline-block;
+  margin: 0 3px 2px 0;
+  padding: 0 0.5em;
+  /* padding: 0.25em 0.5em; */
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -286,11 +285,11 @@ button {  width: auto; overflow: visible; }
   text-align: center;
 }
 
-#vote_buttons button:first-child {
+#vote_buttons button:first-child, #start_buttons button:first-child {
   margin-left: 10px;
 }
 
-#vote_buttons button {
+#vote_buttons button, #start_buttons button {
   margin-right: 10px;
   padding-left: 0.5em;
   padding-right: 0.5em;
