--- a/views/game.erb
+++ b/views/game.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   head.ready(function() {
-    game.init(<%= game.player_commands(session[:id]).to_json %>);
+    game.init(<%= @game.commands_for_player(session[:id]).to_json %>);
   });
 </script>
 
@@ -74,7 +74,7 @@
 
   <div id="word_form" style="display:none;">
     <form>
-      <input type="text" name="found" placeholder="words go here --> O:">
+      <input type="text" name="found" placeholder="words --> O:">
     </form>
   </div>
 
@@ -127,11 +127,19 @@
       <%# <li class="no">guantes</li> %>
     </ul>
   </div>
+
+  <div id="start_game" style="display:none;">
+    <div id="start_buttons">
+      <button type="button" name="start" class="vote yes">Start game!</button>
+    </div>
+  </div>
 </div>
 
 
+<!--
 <div>
   <pre>
-  <%= require 'pp'; h game.pretty_inspect %>
+  <%= require 'pp'; h @game.data.pretty_inspect %>
   </pre>
 </div>
+-->
