--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,14 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/libs/head.min.js"></script>
   <script>
-    head.js('js/libs/modernizr-1.7.min.js', 'js/libs/jquery-1.5.1.min.js', 'js/libs/date.js', 'js/app.js');
+    head.js(
+      'js/libs/modernizr-1.7.min.js',
+      'js/libs/jquery-1.5.1.min.js',
+      'js/libs/jquery-ui-1.8.11.custom.min.js',
+      'js/libs/date.js',
+      'js/libs/json2.js',
+      'js/app.js'
+    );
   </script>
 </head>
 
