Players can start a new game a little while after a normal game ends

--- a/views/game.erb
+++ b/views/game.erb
@@ -141,10 +141,10 @@
 </div>
 
 
-<!--
+<% if params[:debug] %>
 <div>
   <pre>
   <%= require 'pp'; h @game.data.pretty_inspect %>
   </pre>
 </div>
--->
+<% end %>
