Add link to game on main page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
-Let's play!
-
 <script>
 head.ready(function() {
-  log('all set!');
 });
 </script>
+
+Let's play! <a href="/game">go ---&gt;</a>
+
